tests/compiler/nestedUnaryExpressionHang/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/nestedUnaryExpressionHang.ts`, Apache-2.0 License

3333%!!!!!!!!!!!!!!!!!!!!!!!!!!!! //~ ERROR: Expression expected.